# nglogger

./: .gitignore  CMakeLists.txt  README.md  thirdparties.sh
nglogger/: CMakeLists.txt  CMakeLists_with_python.txt  logfile.hpp  logfilemmap.cpp  logfilemmap.hpp  logsplitter.cpp  logsplitter.hpp  nglogger.cpp  nglogger.hpp  pythonwrapper.cpp  threadlogger.hpp
ngloggerui/: CMakeLists.txt  main.cpp
python/: README.md  logviewer.py  ngdump.py
src/: CMakeLists.txt  logfile.cpp  logfile.hpp  logfilemmap.cpp  logfilemmap.hpp  logsplitter.cpp  logsplitter.hpp  multithreadlogger.cpp  threadlogger.cpp  threadlogger.hpp
ui/: main.cpp
